# Parallel-social-behavior-based-algorithm-for-identification-of-influential-users-in-social-network

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yaml  read_dataset.cpp  readme.md
include/: graph_loader.h  influence.h  interest_vector.h  node.h  partition.h  seed_selection.h
src/: graph_loader.cpp  influence.cpp  interest_vector.cpp  main.cpp  partition.cpp  seed_selection.cpp
